# gex-client-c

./: CMakeLists.txt  README.md  main.c
gex/: TF_Integration.c  gex.h  gex_bulk.c  gex_bulk.h  gex_client.c  gex_client.h  gex_client_internal.h  gex_defines.h  gex_helpers.c  gex_helpers.h  gex_internal.h  gex_message_types.h  gex_settings.c  gex_settings.h  gex_unit.c  gex_unit.h  hexdump.c
gex/protocol/: TF_Config.h  TF_Integration.c  TinyFrame.c
gex/serial/: serial.c  serial.h
gex/utils/: payload_builder.h
